# ift_coursework_2024

./: .env.template  .gitignore  docker-compose.yml  pyproject.toml
Team_Birch/coursework_two/: .env.template  .flake8  .gitignore  .pre-commit-config.yaml  Main.py  README.md  docker-compose.yml  pyproject.toml
Team_Birch/coursework_two/config/: conf.yaml  indicators.yaml
Team_Birch/coursework_two/docs/source/: conf.py  index.rst  index.rst.txt  installation_guide.rst  modules.db.rst  modules.rst  usage_instructions.rst
Team_Birch/coursework_two/logs/: final_log.txt  final_output.csv  final_output_old.csv  lineage_output.csv
Team_Birch/coursework_two/src/UI/: UI_data.csv  dbcreate.py  requirements.txt
Team_Birch/coursework_two/static/: data_catalogue.csv  data_dictionary.csv
Team_Magnolia/coursework_one/: Dockerfile  README.md  code_explained.md  docker-compose.override.yml  main.py  pyproject.toml
Team_Magnolia/coursework_one/config/: conf.yaml
Team_Magnolia/coursework_one/modules/api/: analysis_pipeline.py  fastapi_api.py  mongo_index_setup.py  streamlit_app.py
Team_Magnolia/coursework_one/modules/db/: db_connection.py
Team_Magnolia/coursework_one/modules/minio_ops/: minio_client.py
Team_Magnolia/coursework_one/modules/scraper/: csr_fix_and_cleanup.py  csr_scraper.py
Team_Magnolia/coursework_one/scripts/: run_api.sh
Team_Magnolia/coursework_two/: Dockerfile  Main.py  README.md  coursework_two_instructions  create_company_dim.py  docker-compose.override.yml  pyproject.toml  pytest.ini
Team_Magnolia/coursework_two/config/: conf.yaml  config.py  data_dictionary.yaml
Team_Magnolia/coursework_two/docs/source/: conclusion.rst  conf.py
Team_Magnolia/coursework_two/modules/: logging_config.py
Team_Magnolia/coursework_two/modules/Viz/: app.py  models.py
Team_Magnolia/coursework_two/modules/db/: Schema.sql  data_catalogue.csv  data_dict.csv  ingest.py  lineage.py  minio_client.py  mongo_client.py  mongo_operations.py  pg_client.py  query.py  setup_csr_collection.py  setup_lineage.py  setup_mongo.py
Team_Magnolia/coursework_two/modules/extract/: batch.py  catalogue_loader.py  company_lookup.py  config_loader.py  extractor.py  minio_client.py  pipeline.py  prompts.py  scheduler.py   utils.py  validator.py
Team_Magnolia/coursework_two/output/: extracted_data.json  filtered_report_parsed.md  final_standardized.json  standardized_data.csv
Team_Magnolia/coursework_two/tests/: conftest.py  test_cli_commands.py  test_e2e_pipeline.py  test_match_theme.py  test_numeric_utils.py  test_pg_client.py  test_utils.py
team_Salix/coursework_one/: README.md  pyproject.toml  scheduler.py  upload_to_minio.py
team_Salix/coursework_one/a_pipeline/modules/: main.py
team_Salix/coursework_one/a_pipeline/test/: equitystatic.csv  randomsampling.py
team_Salix/coursework_one/b_pipeline/test/: cleaned_url.csv  random30download-unittest.py
team_Salix/coursework_one/docs/source/: index.rst  installation.rst
team_Salix/coursework_two/: .env.example  .gitignore  pyproject.toml  scheduler.py
team_Salix/coursework_two/config/: lin.json  pre-commit-config.yaml  ref.json  scheduler_config.yaml  test_config.yaml
team_Salix/coursework_two/docs/: architecture.rst  conf.py  index.rst  installation.rst  usage.rst
team_Salix/coursework_two/pipeline1/: __init__.py
team_Salix/coursework_two/pipeline1/modules/: __init__.py  main.py  pdf_checker.py  process_problematic.py
team_Salix/coursework_two/pipeline2/: __init__.py
team_Salix/coursework_two/pipeline2/modules/: __init__.py  modelv2.py
team_Salix/coursework_two/pipeline3/modules/: write_lineage.py  write_to_db.py
team_Salix/coursework_two/pipeline4/: __init__.py
team_Salix/coursework_two/pipeline4/modules/: __init__.py  dashboard.py
team_Salix/coursework_two/tests/: conftest.py  test_end_to_end.py
team_Salix/coursework_two/tests/test_pipeline1/: test_main.py  test_pdf_checker.py  test_process_problematic.py  test_ref.json
team_Salix/coursework_two/tests/test_pipeline2/: test_modelv2.py
team_Salix/coursework_two/tests/test_pipeline3/: test_database.py
team_Salix/coursework_two/tests/test_pipeline4/: test_dashboard.py
team_acer/coursework_one/: Dockerfile  README.md  pyproject.toml
team_acer/coursework_one/a_pipeline/: main.py
team_ginkgo/coursework_two/: main.py  pyproject.toml  readme.md
team_ginkgo/coursework_two/docs/source/: api.rst  architecture.rst  conf.py  index.rst  installation.rst  modules.rst  output.rst  usage.rst
team_ginkgo/coursework_two/modules/: api.py  config.py  db.py  gai.html  output.py
team_ginkgo/coursework_two/modules/db/: db.py
team_ginkgo/coursework_two/test/: rEADME.md
team_ginkgo/coursework_two/test/test_pipeline/: test_pipeline.py
team_ginkgo/coursework_two/test/test_unit/: test_api.py  test_db.py  test_output.py
team_jacaranda/coursework_two/: README  README.md  Sphinx_Doc_Generate.md  failed_reports.json  pyproject.toml  pytest.ini
team_jacaranda/coursework_two/FastAPI/: main.py
team_jacaranda/coursework_two/docs/: conf.py  index.rst  modules.security.rst  test.data_storage.rst
team_jacaranda/coursework_two/docs/_build/: index.html  modules.data_storage.html  my_fastapi.html  search.html  searchindex.js  test.html  test.my_fastapi.html
team_jacaranda/coursework_two/docs/_latex/: bigdata_cw2_jacaranda.fdb_latexmk  bigdata_cw2_jacaranda.fls  bigdata_cw2_jacaranda.tex
team_jacaranda/coursework_two/modules/: llm_analyse.py  llm_standardize.py  paragraph_extraction.py
team_jacaranda/coursework_two/modules/data_storage/: completed_modules.txt  create_table.py  data_export.py  failed_reports.json  llm_analyse.py  llm_standardize.py  main.py  paragraph_extraction.py  retry_failed_reports.py
team_jacaranda/coursework_two/modules/db/: company_reports.csv  csr_indicators.csv
team_jacaranda/coursework_two/my_fastapi/: main.py
team_jacaranda/coursework_two/security_report/: bandit_report_data_storage.txt  bandit_report_fastapi.txt  bandit_report_frontend.txt  safety_report_data_storage.txt  safety_report_fastapi.txt  safety_report_frontend.txt
(+4756 files in other folders)
