[project]
name = "coursework-1-for-big-data-group-2-acer-"
version = "0.1.0"
description = "A scalable big data project for automating CSR report retrieval, metadata storage, and distributed data management."
authors = [
    {name = "Saif from Group Acer"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
