[tool.poetry]
name = "Team_Adansonia"
version = "0.1.0"
description = "Team Adansonia"
authors = ["Balazs Bellus <ucesbb4@ucl.ac.uk>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"  # Adjust Python version as needed
requests = "*"

dotenv = "*"
loguru = "*"
minio = "*"
pandas = "*"
flask = "*"
PyPDF2 = "*"
selenium = "*"
imageio = "*"
urllib3 = "*"
dnspython = "*"  # Required for some MongoDB setups
webdriver-manager = "*"
pycryptodome = "^3.21.0"
pymupdf = "^1.25.3"
bs4 = "^0.0.2"
pymongo = "^4.11.1"
llama-parse = "^0.6.12"
fastapi = "^0.115.12"
uvicorn = "^0.34.1"
openai = "^1.75.0"
sphinx = "^8.2.3"

[tool.poetry.group.dev.dependencies]
pytest = "*"
black = "*"
isort = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

packages = [
    { include = "team_adansonia" }  # If your main package is in a directory called `team_adansonia`
]