[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "coursework-one"
version = "0.1.0"
description = "CSR data pipeline including web scraping, storage, API, and data analysis"
authors = ["TeamMagnolia"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "*"
uvicorn = "*"
selenium = "^4.15.2"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
lxml = "*"
pymongo = "^4.6.1"
psycopg2-binary = "^2.9.9"
minio = "^7.2.0"
pandas = "*"
pdfplumber = "*"
python-magic = "*"
nltk = "*"
textblob = "*"
yake = "*"
streamlit = "*"
matplotlib = "*"
PyYAML = "*"
pytest = "*"
apscheduler = "^3.10.4"
chromedriver-autoinstaller = "^0.6.2"
loguru = "^0.7.2"
groq = "^0.17.0"
webdriver-manager = "^4.0.1"
urllib3 = "1.26.18"
google-api-python-client = "^2.116.0"
google-auth-httplib2 = "^0.1.1"
google-auth-oauthlib = "^1.1.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^6.0"
sphinx-rtd-theme = "^1.0"    

[tool.poetry.dev-dependencies]

