 feature/coursework_one_Salix
[project]
name = "team-salix"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
package-mode = false
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "urllib3 (>=2.3.0,<3.0.0)",
    "selenium (>=4.29.0,<5.0.0)",
    "isort (>=6.0.0,<7.0.0)",
    "boto3 (>=1.36.26,<2.0.0)",
    "aiohttp (>=3.11.13,<4.0.0)",
    "pypdf2 (>=3.0.1,<4.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "nest_asyncio (>=1.5.8,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "apscheduler (>=3.10.1,<4.0.0)",
    "sphinx (>=7.2.6,<8.0.0)",
    "sphinx-rtd-theme (>=2.0.0,<3.0.0)",
    "myst-parser (>=2.0.0,<3.0.0)",
    "sphinx-autodoc-typehints (>=1.25.2,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.sphinx]
project = "Team Salix CSR Report Pipeline"
copyright = "2024, Team Salix"
author = "Team Salix"
release = "0.1.0"
extensions = [
    "sphinx.ext.autodoc",
    "sphinx.ext.napoleon",
    "sphinx.ext.viewcode",
    "sphinx.ext.githubpages",
    "sphinx_rtd_theme",
    "sphinx.ext.intersphinx",
    "sphinx.ext.todo",
    "sphinx.ext.coverage",
    "sphinx.ext.mathjax",
    "sphinx.ext.ifconfig",
    "sphinx.ext.autosummary",
    "sphinx_autodoc_typehints"
]
templates_path = ["_templates"]
exclude_patterns = ["_build", "Thumbs.db", ".DS_Store"]
html_theme = "sphinx_rtd_theme"
html_static_path = ["_static"]

[tool.poetry]
name = "coursework-one"
version = "0.1.0"
description = ""
authors = ["TeamOak"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
 main
