[tool.poetry]
name = "coursework-one"
version = "0.1.0"
description = ""
authors = ["TeamOak"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
google-api-python-client = "^2.161.0"
beautifulsoup4 = "^4.13.3"
selenium = "^4.29.0"
pdfplumber = "^0.11.5"
psycopg2-binary = "^2.9.10"
boto3 = "^1.36.26"
apscheduler = "^3.11.0"
bs4 = "^0.0.2"
pillow = "^11.1.0"
psycopg2 = "^2.9.10"
tenacity = "^9.0.0"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
jsonschema = "^4.23.0"
urllib3 = "^2.3.0"
flake8 = "^7.1.2"
black = "^25.1.0"
bandit = "^1.8.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.2"
black = "^25.1.0"
isort = "^6.0.0"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
