[tool.poetry]
name = "coursework-one"
version = "0.1.0"
description = ""
authors = ["TeamJacaranda"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.26.0"
beautifulsoup4 = "^4.10.0"
google-api-python-client = "^2.36.0"
psycopg2-binary = "^2.9.9"
logging = "^0.4.9.6"
pathlib = "^1.0.1"
urllib3 = "^1.26.7"
kafka-python = "^2.0.2"
minio = "^7.1.0"
spacy = "^3.5.0"
nltk = "^3.8"
pytest = "^8.3.4"
tqdm = "^4.67.1"
pdfminer-six = "^20250327"
pymupdf = "^1.25.5"
fuzzywuzzy = "^0.18.0"
pdfplumber = "^0.11.6"
python-levenshtein = "^0.27.1"
psutil = "^7.0.0"
dotenv = "^0.9.9"
openai = "^1.73.0"
datetime = "^5.5"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
